--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <section> -->
 
     <section class="section-light">
-      <div class="container-inner">
+      <div class="container-inner space">
         <h2>Expert care for your furry, feathery, or scaley friend</h2>
         <p>
           We know how stressful it is to leave your pets at home alone. We're a
